fix: ajustar español a venezolano - mismo día, Elige

--- a/preview-nueva-paleta.html
+++ b/preview-nueva-paleta.html
@@ -549,7 +549,7 @@
             <div class="logo">🚗</div>
             <div class="header-text">
                 <h1>REPUESTO HOY</h1>
-                <p>Caracas • Entrega same-day</p>
+                <p>Caracas • Entrega el mismo día</p>
             </div>
         </div>
     </header>
@@ -606,7 +606,7 @@
             <div class="feature-card">
                 <div class="feature-number">3</div>
                 <h3>COMPARÁ PRECIOS</h3>
-                <p>Elegí entre Económico, Standard o Premium. Mejor precio garantizado.</p>
+                <p>Elige entre Económico, Standard o Premium. Mejor precio garantizado.</p>
             </div>
         </div>
     </section>
@@ -710,7 +710,7 @@
                     <div class="footer-logo">🚗</div>
                     <h4>REPUESTO HOY</h4>
                 </div>
-                <p>Repuestos para tu carro con entrega same-day en Caracas. Confianza, urgencia y fuerza automotriz.</p>
+                <p>Repuestos para tu carro con entrega el mismo día en Caracas. Confianza, urgencia y fuerza automotriz.</p>
             </div>
             <div>
                 <h5>Categorías</h5>
